--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ deploy:
   provider: heroku
   api_key:
     secure: 4d4f0194-d395-4c76-b618-61c8269f86f9
-  app: test-my-travisci-project
+  app: lab3practice
   on:
     repo: amity871028/lab3practice
     
